# smle

./: .gitignore  README.md  publish.sh  pyproject.toml
docs/source/: quickstart.rst
docs/source/features/: configuration.rst  index.rst  logger.rst  wandb.rst
examples/notifications/: main.py  smle.yaml
experimental/notification/: __init__.py  email.py  slack.py
experimental/templates/: mlp.py  resnet.py
src/smle/: __init__.py  cli.py
src/smle/args/: __init__.py  args.py
src/smle/cli/: __init__.py  create_command.py  init_command.py
src/smle/cli/templates/: smle.yaml
src/smle/logging/: __init__.py  logging.py
src/smle/notification/: __init__.py  notifier.py  service.py
src/smle/notification/services/: __init__.py  discord.py  telegram.py
src/smle/secrets/: __init__.py  keystore.py
src/smle/trainer/: __init__.py  trainer.py
src/tests/: conftest.py
src/tests/notification/: test_discord_service.py
